padding-bottom added to main, attempt to correct footer overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,9 @@ footer ul{
 h2{
     display:inline-block;
 }
-
+main{
+    padding-bottom: 75px;
+}
 nav ul{
     margin:auto;
     position: relative;
@@ -44,7 +46,7 @@ nav ul{
 ul{
     padding: 0px;
 }
-@media screen and (max-width:667px){
+@media screen and (max-width:668px){
     .display-5{
         font-size: 10px;
     }
